使用 Colab 创建而成

--- a/Assesement_2.ipynb
+++ b/Assesement_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4gk9KTOzAtvwfaJ89pRnv",
+      "authorship_tag": "ABX9TyN2+oH7jaRAy0JStxZHbbGL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,6 +63,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This code should primarily be used to connect to a SQLite database and query the table names in it. And we define a SQL query statement query_tables, which aims to get the names of all the tables in the database. Next, we execute this query and store the results in a Pandas DataFrame using pd.read_sql(query_tables, conn), and the final result is name\n",
+        "0 AUS_energy"
+      ],
+      "metadata": {
+        "id": "rc87lDzGfLLK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# SQL query to calculate total energy consumption per state\n",
@@ -73,7 +83,7 @@
         "GROUP BY State;\n",
         "\"\"\"\n",
         "\n",
-        "# 执行查询并读取数据\n",
+        "# Execute the query and read the data\n",
         "df_state_energy = pd.read_sql(query, conn)\n",
         "\n",
         "# Checking data\n",
@@ -96,7 +106,7 @@
         "id": "8Diqpbnj1WvK",
         "outputId": "c97a3654-8263-46ed-f6da-d6fe9aec0cdb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,6 +133,21 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "First, we define a SQL query statement query, which is designed to get energy consumption data for each state from a table named AUS_energy. This query will calculate the total consumption of coal, oil, natural gas, and renewable energy for each state.\n",
+        "\n",
+        "We use pd.read_sql(query, conn) to execute this query and store the results in a Pandas DataFrame for subsequent processing and analysis.\n",
+        "\n",
+        "Next, we examine the data in the DataFrame, using print(df_state_energy).\n",
+        "\n",
+        "Finally, we used Matplotlib to draw a bar chart. Set the size of the form to 12x7 inches and showing the total energy consumption by state. The x-axis of the graph is the state name and the y-axis is the total energy consumption in PJ."
+      ],
+      "metadata": {
+        "id": "oXfTB6CVkD6z"
+      }
     },
     {
       "cell_type": "code",
@@ -169,7 +194,7 @@
         "id": "f7DvyLSc1f7J",
         "outputId": "b5028f31-8d1a-43d2-d891-2480a2af3b69"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,6 +218,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This code is used to calculate the total energy consumption of different fuel types in Australia and visualize the result as a bar chart.\n",
+        "\n",
+        "First, we define an SQL query statement query that gets the total consumption of various fuel types (e.g., coal, oil, natural gas, and renewable energy) from a table named AUS_energy. We use SUM(COALESCE(...)) to calculate the total consumption of each fuel type.\n",
+        "\n",
+        "We execute this query and store the results in a Pandas DataFrame using pd.read_sql(query, conn).\n",
+        "\n",
+        "Next, we examine the data in the DataFrame, using print(df_fuel_consumption).\n",
+        "\n",
+        "Finally, we used Matplotlib to draw a bar chart showing the total energy consumption for different fuel types. The x-axis of the graph is the fuel type and the y-axis is the total energy consumption (in PJ)."
+      ],
+      "metadata": {
+        "id": "GjTktck4lhxo"
+      }
     },
     {
       "cell_type": "code",
@@ -235,7 +277,7 @@
         "id": "QylOqbno2IZM",
         "outputId": "d098ae5a-b443-4721-a5cf-166fb0c71eb4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,6 +311,23 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This code is used to analyze the total energy consumption of different fuel types in Australia and visualize the results as a bar chart.\n",
+        "\n",
+        "First, we define a SQL query statement query which gets the energy consumption data for each year from a table called AUS_energy. We use SUM(COALESCE(...)) to calculate the total consumption for each fuel type.\n",
+        "\n",
+        "We execute this query and store the results in a Pandas DataFrame using pd.read_sql(query, conn).\n",
+        "\n",
+        "Next, we examine the data in the DataFrame, using print(df_fuel_year).\n",
+        "\n",
+        "Finally, we used Matplotlib to draw a line graph with a size of (14,8) showing the total energy consumption of different fuel types in different years. The x-axis of the graph is the year and the y-axis is the total energy consumption (in PJ). Each fuel type is represented by a different marker, such as a dot (o)"
+      ],
+      "metadata": {
+        "id": "z8wXmOFNmohb"
+      }
     },
     {
       "cell_type": "code",
@@ -309,7 +368,7 @@
         "id": "-8EOoFGW2YvA",
         "outputId": "c60a088a-ec73-40ed-9f68-cb539c9e8a4b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,6 +401,25 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The SQL query retrieves data from a table named AUS_energy.\n",
+        "\n",
+        "It calculates the total annual energy consumption per state by summing up energy values for different sources (coal, oil, gas, renewables) for each year and state.\n",
+        "\n",
+        "The COALESCE function handles cases where specific energy sources are missing (represented by 0).\n",
+        "\n",
+        "The result includes columns for Year, State, and Total_Energy_Consumption.\n",
+        "\n",
+        "The Python code snippet executes the SQL query and reads the data into a Pandas DataFrame called df_state_year.\n",
+        "\n",
+        "It then visualizes the total annual energy consumption per state over the years using a line plot.\n"
+      ],
+      "metadata": {
+        "id": "QM6IIKQ1oUl9"
+      }
     }
   ]
 }
