--- a/Assesement_2.ipynb
+++ b/Assesement_2.ipynb
@@ -41,14 +41,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Establishing connection to start:**"
+      ],
+      "metadata": {
+        "id": "Wn9UMr7qZlca"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5gHEVtRlzT8Z",
-        "outputId": "5f08d962-c9c3-4b25-f107-0351ee82696b"
+        "outputId": "cb166520-cdd9-4701-ed73-012c0b7648fa"
       },
       "outputs": [
         {
@@ -87,6 +96,41 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Problems to solve:**\n",
+        "\n",
+        "Group A\n",
+        "\n",
+        "1. Compute and visualize the total energy consumption for each state.\n",
+        "2. Compute and visualize the total energy consumption by fuel type.\n",
+        "3. Analyse and plot the total energy consumption fuel types for each year.\n",
+        "4. Analyse and visualize the total energy consumption for each state for each year.\n",
+        "\n",
+        "Group B\n",
+        "\n",
+        "6. Analyse the per capita energy consumption for each state for each year and create a\n",
+        "corresponding visualization.\n",
+        "\n",
+        "Group C\n",
+        "\n",
+        "9. Analyse and compare the growth rate of the GSP and the consumption of renewable\n",
+        "energy for each state.\n"
+      ],
+      "metadata": {
+        "id": "pA4xUwDqaK-Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Group A.1 : Compute and visualize the total energy consumption for each state.**"
+      ],
+      "metadata": {
+        "id": "s1G2KJpXZg5Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# SQL query to calculate total energy consumption per state\n",
@@ -118,9 +162,9 @@
           "height": 799
         },
         "id": "8Diqpbnj1WvK",
-        "outputId": "907abaa7-61ce-469a-c76e-36f080c18367"
+        "outputId": "5b7e5a66-17d8-4800-8dd2-5eec83cdc3fb"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,6 +205,15 @@
       ],
       "metadata": {
         "id": "oXfTB6CVkD6z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Group A.2 : Compute and visualize the total energy consumption by fuel type.**"
+      ],
+      "metadata": {
+        "id": "-v5IEccRbQx7"
       }
     },
     {
@@ -206,9 +259,9 @@
           "height": 706
         },
         "id": "f7DvyLSc1f7J",
-        "outputId": "bb4b5f83-1bc7-4636-d79c-6d4e977ddb27"
+        "outputId": "8b0b19a2-9e22-4728-94cd-90e72fd3705f"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,6 +304,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Group A.3 : Analyse and plot the total energy consumption fuel types for each year.**"
+      ],
+      "metadata": {
+        "id": "riwkrwD_cEYS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# SQL query to analyze total energy consumption by fuel type per year\n",
@@ -289,9 +351,9 @@
           "height": 1000
         },
         "id": "QylOqbno2IZM",
-        "outputId": "3644ecef-22c9-4305-d862-21cdb7257e10"
+        "outputId": "4562b91d-c5b0-46b5-926e-f6b5e0df3510"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,6 +403,15 @@
       ],
       "metadata": {
         "id": "z8wXmOFNmohb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Group A.4 : Analyse and visualize the total energy consumption for each state for each year.**"
+      ],
+      "metadata": {
+        "id": "s65aTH08cT2i"
       }
     },
     {
@@ -438,14 +509,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        " **Group B: Analyse the per capita energy consumption for each state for each year and create a\n",
+        " **Group B.9 : Analyse the per capita energy consumption for each state for each year and create a\n",
         "corresponding visualization.**\n",
         "\n",
         "\n",
         "**Energy Consumption:**\n",
-        "Energy consumption refers to the total amount of energy used by a country, state, or group of people.\n",
-        "\n",
-        "It includes energy used for various purposes, such as electricity, heating, transportation, and industrial processes.\n",
+        "Energy consumption refers to the total amount of energy used by a country, state, or group of people.It includes energy used for various purposes, such as electricity, heating, transportation, and industrial processes.\n",
         "\n",
         "**Per Capita:**\n",
         "“Per capita” means “per person” or “for each individual.”\n",
@@ -505,12 +574,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "CiT8K3uoWFK-",
-        "outputId": "eb823c4f-8560-4138-913d-661a6fcc7386",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+          "height": 962
+        },
+        "id": "CiT8K3uoWFK-",
+        "outputId": "eb823c4f-8560-4138-913d-661a6fcc7386"
       },
       "execution_count": 13,
       "outputs": [
