--- a/Assesement_2.ipynb
+++ b/Assesement_2.ipynb
@@ -514,14 +514,14 @@
         "\n",
         "\n",
         "**Energy Consumption:**\n",
-        "Energy consumption refers to the total amount of energy used by a country, state, or group of people.It includes energy used for various purposes, such as electricity, heating, transportation, and industrial processes.\n",
+        "Energy consumption refers to the total amount of energy used by a country, state, or group of people.This includes energy used for various purposes, such as electricity, heating, transportation, and industrial processes.\n",
         "\n",
         "**Per Capita:**\n",
         "“Per capita” means “per person” or “for each individual.”\n",
-        "When we talk about energy consumption per capita, this is how much energy each person uses on average.\n",
+        "Energy consumption per capita is how much energy each person uses on average.\n",
         "\n",
         "**Calculation:**\n",
-        "First, find the total energy consumption (measured in petajoules, PJ) for a specific state.\n",
+        "First, we find the total energy consumption (measured in petajoules, PJ) for a specific state.\n",
         "Next, divide this total energy consumption by the population of that area.\n",
         "Finally, convert the result from petajoules (PJ) to gigajoules (GJ) because 1 PJ = 1,000 GJ."
       ],
