--- a/Assignment_2_Business_Report.ipynb
+++ b/Assignment_2_Business_Report.ipynb
@@ -120,7 +120,7 @@
         "Here, we can start to inspect the dataset from the 'AUS_energy_sqlite3.db'.\n",
         "\n",
         "\n",
-        "Code: See code below"
+        "See code below:"
       ],
       "metadata": {
         "id": "huklgnuyo3Rq"
@@ -164,15 +164,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Functionality:\n",
-        "\n",
         "First line is to import the SQLite module.\n",
         "\n",
         "Second line is establishes a connection to an SQLite database file named 'AUS_energy_sqlite3.db'.\n",
         "\n",
         "And the Third line is to create an cursor object to execute SQL queries and fetch results from the database.\n",
-        "\n",
-        "Rationale:\n",
         "\n",
         "The code establishes a connection to an SQLite database (AUS_energy_sqlite3.db) as given for this task and prepares a cursor  object for executing SQL queries for data inspection."
       ],
@@ -213,10 +209,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Task: Data extraction and manipulation:**"
+        "SQL Query:\n",
+        "\n",
+        "The SQL query above retrieves the names of the tables in an SQLite database.\n",
+        "It looks for tables within the database by querying the sqlite_master table.\n",
+        "Specifically, it selects the name column from the sqlite_master table where the type is 'table'.\n",
+        "\n",
+        "The cursor.execute(sql) line executes the SQL query.\n",
+        "The result of the query is fetched using cursor.fetchall(), which returns a list of table names."
       ],
       "metadata": {
-        "id": "7uely6y89yoa"
+        "id": "NIrJ9OE-1xF0"
       }
     },
     {
@@ -255,6 +258,29 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SQL Query:\n",
+        "\n",
+        "(PRAGMA table_info()):\n",
+        "\n",
+        "The provided SQL query uses the PRAGMA table_info() statement.\n",
+        "It retrieves information about the columns (fields) within the table named 'AUS_energy'. Execute and fetchall for executing the query and getting the result corresponds to a column in the table."
+      ],
+      "metadata": {
+        "id": "L0snL3RG4e_8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Data extraction and manipulation:**"
+      ],
+      "metadata": {
+        "id": "7uely6y89yoa"
+      }
     },
     {
       "cell_type": "code",
