使用 Colab 创建而成

--- a/Assignment_2_Business_Report.ipynb
+++ b/Assignment_2_Business_Report.ipynb
@@ -60,7 +60,61 @@
         "\n",
         "Reflect on the usability and effectiveness of Python notebooks as Report.\n",
         "\n",
-        "Reflect on the use of Gen AI in aiding in problem solving and data analysis."
+        "Reflect on the use of Gen AI in aiding in problem solving and data analysis.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Weizhe's part:\n",
+        "\n",
+        "\n",
+        "\n",
+        "2. limitations:\n",
+        "\n",
+        "Data integrity and processing\n",
+        "limitation:\n",
+        "There are no clear steps for handling missing or outliers. If there are missing or outliers in the data, the results of the analysis may be affected.\n",
+        "COALESCE is used in SQL queries to handle missing values, but in subsequent data processing and visualization, these missing values are not further checked and processed.\n",
+        "Suggestions for Improvement:\n",
+        "After reading the data, check and process missing values and outliers. For example, use df.isnull().sum() to check the number of missing values in each column and use an appropriate method (such as fill, delete or replace) to handle the missing values.\n",
+        "Before visualization, data is cleaned and standardized to ensure accuracy and interpretability of charts.\n",
+        "\n",
+        "Visualization\n",
+        "limitation:\n",
+        "Visual diagrams are basic and may not convey complex information clearly.\n",
+        "The lack of chart annotations and labels may affect the reader's understanding of the data.\n",
+        "Suggestions for Improvement:\n",
+        "Enhance the visualization of the chart, such as adding data labels, annotations, trend lines, etc., to improve the readability and information content of the chart.\n",
+        "Use richer chart types (such as stacked bar charts, scatter plots, box plots, etc.) to display data relationships and distributions in different dimensions.\n",
+        "\n",
+        "Database connection and query efficiency\n",
+        "limitation:\n",
+        "The code re-executes the SQL query every time, which may affect performance if the amount of data is large.\n",
+        "Not using indexes or optimizing queries, which can result in slower queries.\n",
+        "Suggestions for Improvement:\n",
+        "Create indexes in the database to optimize query performance.\n",
+        "After the initial query, store the data locally (such as CSV file or pandas DataFrame) to avoid repeated queries and improve processing speed.\n",
+        "Use connection pools or persistent connections to improve the efficiency and stability of database connections.\n",
+        "\n",
+        "\n",
+        "3. reflecting on the usability and effectiveness of Python notebooks as a reporting tool\n",
+        "Usability:\n",
+        "Python notebooks are very effective in data analysis and reporting. They allow for interactive and dynamic exploration of data.\n",
+        "The notebooks integrate code, visualization, and text, making it easy to record and present findings.\n",
+        "Effectiveness:\n",
+        "Notebooks support achieving reproducibility by combining code and results in a single document.\n",
+        "They are particularly well suited for collaboration as they can be shared and edited by multiple users.\n",
+        "\n",
+        "4.Reflect on the use of Gen AI in aiding in problem solving and data analysis\n",
+        "\n",
+        "Advantage:\n",
+        "Generative AI can help automate data preprocessing, recognize patterns and generate insights from big data sets.\n",
+        "It can provide recommendations and code snippets to speed up the analysis process.\n",
+        "Validity:\n",
+        "Generative AI can help generate hypotheses and perform exploratory data analysis, providing new perspectives that may have been overlooked.\n",
+        "It is particularly useful for repetitive tasks, allowing analysts to focus on more complex problem-solving activities.\n",
+        "Limitations:\n",
+        "AI-generated insights are dependent on the quality of the input data and the context provided. Incorrect or incomplete inputs can lead to misleading conclusions."
       ],
       "metadata": {
         "id": "byWHIe31hr1W"
@@ -149,7 +203,7 @@
         "id": "dwd21Hfb-TNi",
         "outputId": "5ec38a77-4e2a-4cfd-e4c2-28b513ddc6b9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +246,7 @@
         "id": "TIw3YejQ_als",
         "outputId": "b177d8e2-7e7c-499f-a9be-0a63cdd5b159"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +292,7 @@
         "id": "EziiqfQz_09b",
         "outputId": "b5b19a9b-dbf1-4b39-b4c8-99e067a8c616"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +350,7 @@
       "metadata": {
         "id": "OGFIEzE9_6j7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +366,7 @@
         "id": "S1ndczG46sxC",
         "outputId": "1f7f1607-1848-4b35-935c-33f38c4cd424"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,7 +855,7 @@
         "id": "fNUEvyXD67LF",
         "outputId": "47ed8e18-1c68-475c-cddc-74b22431e03a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1199,7 @@
         "id": "VTvywOdHreHS",
         "outputId": "e9881c18-27b4-40a1-b472-d175e9fdad85"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1183,7 +1237,7 @@
         "id": "dX6b_gdhBHei",
         "outputId": "f2e53c54-e206-4766-f783-824501bddf16"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1528,7 +1582,7 @@
         "id": "7t8_jJ14twus",
         "outputId": "297117d9-4cf0-4189-e035-e5ae858f47d7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1883,7 +1937,7 @@
         "id": "bA6TsV8ltA1R",
         "outputId": "0f4d5c9a-8a32-4d12-d806-0c2b21f87cae"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
