--- a/Assignment_2_Business_Report.ipynb
+++ b/Assignment_2_Business_Report.ipynb
@@ -1900,171 +1900,30 @@
     {
       "cell_type": "markdown",
       "source": [
-        "interpretation and conclusion.\n"
-      ],
-      "metadata": {
-        "id": "Rk8y9qGNH132"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1. Summarise the main insights you have gained from the data analysis."
-      ],
-      "metadata": {
-        "id": "rviJX46otwup"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Database connection issues:\n",
-        "* Problem: Unable to connect to the SQLite database.\n",
+        "Weizhe's part:\n",
         "\n",
-        "* Insight: Ensure the database file path is correct and the file has the appropriate permissions. Use context managers (with statements) to handle connections properly.\n",
+        "2.Limitations of your analysis and suggest possible improvements:\n",
         "\n",
-        "* Solution:"
-      ],
-      "metadata": {
-        "id": "WA-wcj9stzp7"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sqlite3.connect('database.db') as conn:"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "DyUPFH68xbEp",
-        "outputId": "d042fdef-551f-4d6b-c178-3d60ef84711d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 108
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-1-8911b7083757>, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8911b7083757>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sqlite3.connect('database.db') as conn:\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# SQL Syntax Errors:\n",
-        "* Problem: SQL queries fail due to syntax errors.\n",
+        "Data integrity and processing limitation: There are no clear steps for handling missing or outliers. If there are missing or outliers in the data, the results of the analysis may be affected. COALESCE is used in SQL queries to handle missing values, but in subsequent data processing and visualization, these missing values are not further checked and processed.\n",
         "\n",
-        "* Insight: Review SQL syntax carefully. Use multiline strings for complex queries to improve readability.\n",
+        "Suggestions for Improvement: After reading the data, check and process missing values and outliers. For example, use df.isnull().sum() to check the number of missing values in each column and use an appropriate method (such as fill, delete or replace) to handle the missing values. Before visualization, data is cleaned and standardized to ensure accuracy and interpretability of charts.\n",
         "\n",
-        "* solution:"
-      ],
-      "metadata": {
-        "id": "3Hy8k0-Mww2Y"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "query = \"\"\"\n",
-        "SELECT *\n",
-        "FROM table_name\n",
-        "WHERE condition;\n",
-        "\"\"\"\n",
-        "cursor.execute(query)\n"
-      ],
-      "metadata": {
-        "id": "rO34N3ZsxlY7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Data Integrity Issues:\n",
-        "* Problem: Inconsistent or corrupted data.\n",
+        "Visualization limitation: Visual diagrams are basic and may not convey complex information clearly. The lack of chart annotations and labels may affect the reader's understanding of the data. Suggestions for Improvement: Enhance the visualization of the chart, such as adding data labels, annotations, trend lines, etc., to improve the readability and information content of the chart. Use richer chart types (such as stacked bar charts, scatter plots, box plots, etc.) to display data relationships and distributions in different dimensions.\n",
         "\n",
+        "Database connection and query efficiency limitation: The code re-executes the SQL query every time, which may affect performance if the amount of data is large. Not using indexes or optimizing queries, which can result in slower queries. Suggestions for Improvement: Create indexes in the database to optimize query performance. After the initial query, store the data locally (such as CSV file or pandas DataFrame) to avoid repeated queries and improve processing speed. Use connection pools or persistent connections to improve the efficiency and stability of database connections.\n",
         "\n",
-        "* Insight: Use transactions to ensure data integrity. Always commit or rollback transactions as needed.\n",
+        "3.Usability and effectiveness of Python notebooks as Report.\n",
         "\n",
+        "Reflecting on the usability and effectiveness of Python notebooks as a reporting tool Usability: Python notebooks are very effective in data analysis and reporting. They allow for interactive and dynamic exploration of data. The notebooks integrate code, visualization, and text, making it easy to record and present findings. Effectiveness: Notebooks support achieving reproducibility by combining code and results in a single document. They are particularly well suited for collaboration as they can be shared and edited by multiple users.\n",
         "\n",
-        "* Solution:"
-      ],
-      "metadata": {
-        "id": "TAXYnpppxpNN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "try:\n",
-        "    cursor.execute(query)\n",
-        "    conn.commit()\n",
-        "except sqlite3.Error as e:\n",
-        "    conn.rollback()\n",
-        "    print(f\"An error occurred: {e}\")\n"
-      ],
-      "metadata": {
-        "id": "VTOXgfFsyEnQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Matplotlib:\n",
+        "4.Reflection on the use of Gen AI in aiding in problem solving and data analysis.\n",
         "\n",
-        "* Large Data Visualization:\n",
-        "\n",
-        "* Problem: Plotting large datasets makes the plot unreadable.\n",
-        "\n",
-        "* Insight: Downsample the data or use aggregation techniques to make the plot more readable.\n",
-        "\n",
-        "Solution:\n"
-      ],
-      "metadata": {
-        "id": "-9HHJoM5yO-8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_sampled = df.sample(frac=0.1)  # Take a 10% sample of the data\n",
-        "plt.plot(df_sampled['x_column'], df_sampled['y_column'])\n",
-        "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "LkR8Oo7Bzg12"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "* Understanding common errors (such as syntax errors, type errors, and value errors) and how to troubleshoot them can significantly improve coding efficiency. Familiarize myself with error messages and stack traces. Hence I developed debuggig skills with the help of GEN AI.\n",
+        "Advantage: Generative AI can help automate data preprocessing, recognize patterns and generate insights from big data sets. It can provide recommendations and code snippets to speed up the analysis process. Validity: Generative AI can help generate hypotheses and perform exploratory data analysis, providing new perspectives that may have been overlooked. It is particularly useful for repetitive tasks, allowing analysts to focus on more complex problem-solving activities. Limitations: AI-generated insights are dependent on the quality of the input data and the context provided. Incorrect or incomplete inputs can lead to misleading conclusions.\n",
         "\n"
       ],
       "metadata": {
-        "id": "fgT2G_xQzzN8"
+        "id": "QgtIYZiS1Dir"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bMlOmTF1zie7"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
