--- a/Assignment_2_Business_Report.ipynb
+++ b/Assignment_2_Business_Report.ipynb
@@ -1909,7 +1909,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Summarise the main insights you have gained from the data analysis."
+        "#Summarise the main insights you have gained from the data analysis."
       ],
       "metadata": {
         "id": "rviJX46otwup"
@@ -1918,7 +1918,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Database connection issues:\n",
+        "* Database connection issues:\n",
         "* Problem: Unable to connect to the SQLite database.\n",
         "\n",
         "* Insight: Ensure the database file path is correct and the file has the appropriate permissions. Use context managers (with statements) to handle connections properly.\n",
@@ -1935,30 +1935,15 @@
         "sqlite3.connect('database.db') as conn:"
       ],
       "metadata": {
-        "collapsed": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 108
-        },
-        "id": "DyUPFH68xbEp",
-        "outputId": "d042fdef-551f-4d6b-c178-3d60ef84711d"
+        "id": "iPm4xM0S40cQ"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-1-8911b7083757>, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8911b7083757>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    sqlite3.connect('database.db') as conn:\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# SQL Syntax Errors:\n",
+        "* SQL Syntax Errors:\n",
         "* Problem: SQL queries fail due to syntax errors.\n",
         "\n",
         "* Insight: Review SQL syntax carefully. Use multiline strings for complex queries to improve readability.\n",
@@ -1988,7 +1973,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Integrity Issues:\n",
+        "* Data Integrity Issues:\n",
         "* Problem: Inconsistent or corrupted data.\n",
         "\n",
         "\n",
@@ -2020,7 +2005,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Matplotlib:\n",
+        "* Matplotlib:\n",
         "\n",
         "* Large Data Visualization:\n",
         "\n",
@@ -2058,13 +2043,58 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# Discuss any limitations of your analysis and suggest possible improvements."
+      ],
       "metadata": {
-        "id": "bMlOmTF1zie7"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "lsiLR7RR5BSu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* we can get better in Python and make less mistakes by concentrating on frequent mistakes, debugging, documentation, practice, version control, code readability, and learning from mistakes. Slow performance, wasteful SQL queries, crowded visualisations, and poor data quality are some of the shortcomings of the investigation. comprehensive data cleansing, effective processing, error management, and detail records are some of the improvements."
+      ],
+      "metadata": {
+        "id": "Zi_bZHA09EsC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reflect on the usability and effectiveness of Python notebooks as Report."
+      ],
+      "metadata": {
+        "id": "etSbBYIFAXrj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*  Python notebooks are interactive and include text, code, and visualisations, they work well for reporting. They facilitate comprehension and troubleshooting by improving consistency and quick result display. However, version control can be difficult, and they can become unmanageable with huge datasets and complex analyses."
+      ],
+      "metadata": {
+        "id": "11lLCq1DAaAX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reflect on the use of Gen AI in aiding in problem solving and data analysis:"
+      ],
+      "metadata": {
+        "id": "nfj85vYXCQ14"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*  Gen AI greatly facilitates problem-solving and data analysis. By swiftly analysing big datasets, finding patterns, and forecasting trends, it improves efficiency. Natural language processing and advanced analytics provided by Gen AI facilitate decision-making by facilitating easier access to complex data."
+      ],
+      "metadata": {
+        "id": "BwJPbBU-CUAD"
+      }
     }
   ]
 }
