--- a/Assignment_2_Business_Report.ipynb
+++ b/Assignment_2_Business_Report.ipynb
@@ -2475,11 +2475,11 @@
         "\n",
         "Visualization limitation: Visual diagrams are basic and may not convey complex information clearly. The lack of chart annotations and labels may affect the reader's understanding of the data.\n",
         "\n",
-        "Suggestions for Improvement: Enhance the visualization of the chart, such as adding data labels, annotations, trend lines, etc., to improve the readability and information content of the chart. Use richer chart types (such as stacked bar charts, scatter plots, box plots, etc.) to display data relationships and distributions in different dimensions.\n",
+        "Suggestions for Improvement: Improve the chart's visualisation by adding data labels, annotations, trend lines, and so on, to improve readability and information content. To show connections between data and distributions in several dimensions, use richer chart types (e.g., stacked bar charts, scatter plots, box plots, etc).\n",
         "\n",
         "Database connection and query efficiency limitation: The code re-executes the SQL query every time, which may affect performance if the amount of data is large. Not using indexes or optimizing queries, which can result in slower queries.\n",
         "\n",
-        "Suggestions for Improvement: Create indexes in the database to optimize query performance. After the initial query, store the data locally (such as CSV file or pandas DataFrame) to avoid repeated queries and improve processing speed. Use connection pools or persistent connections to improve the efficiency and stability of database connections.\n",
+        "Suggestions for Improvement: Use indexes in the database to improve query efficiency. To minimise repetitive queries and enhance processing efficiency, save the data locally (for example, in a CSV file or a pandas DataFrame). Use connection pools or enduring connections to increase database connection efficiency and stability.\n",
         "\n",
         "We can get better in Python and make less mistakes by concentrating on frequent mistakes, debugging, documentation, practice, version control, code readability, and learning from mistakes. Slow performance, wasteful SQL queries, crowded visualisations, and poor data quality are some of the shortcomings of the investigation. comprehensive data cleansing, effective processing, error management, and detail records are some of the improvements.\n",
         "\n",
